docs/sf-export/sfdx-raw/objects/SMS_Template__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
                <default>true</default>
                <label>Lead</label>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>