docs/sf-export/sfdx-raw/objects/SMS_Template__mdt/fields/SMS_Body__c.field-meta.xml
<CustomField>
    <fullName>SMS_Body__c</fullName>
    <label>SMS Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>